<resources>
    <string name="app_name">Journey to Mars</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_mars">Welcome to Mars Launcher</string>
    <string name="mars">mars</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="launch_me_to_mars">Launch me to mars!</string>
    <string name="title_activity_mars_landing">Mars</string>
    <string name="no_name_error">We need your name to book your ticket to Mars :o</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
